--- a/work/views/index.ejs
+++ b/work/views/index.ejs
@@ -8,6 +8,7 @@
    <a href = "gacha"class="square_btn">がちゃ</a>
    <a href = "characters"class="square_btn">きゃら</a>
    <a href = "deckManeger"class="square_btn">へんせい</a>
+   <a href = "chat"class="square_btn">ちゃっと</a>
 
   </body>
 </html>
